# GenealogicCPP

./: README.md  pyproject.toml
src/genealogic/: __init__.py  __main__.py  cli.py  parser.py  tree.py  tui.py  visualizer.py
tests/fixtures/: Animal.h  CRTPBase.h  CRTPChild.h  Cat.h  Dog.h  Feature.h  Flyable.h  FlyingDog.h  GoldenRetriever.h  Labrador.h  MultilineChild.h  PersianCat.h  PlainStruct.h  Poodle.h
